2005-02-24  Romain Francoise  <romain@orebokech.com>

	* w3m.el (w3m-lynx-like-map): Bind [follow-link] so as to make
	mouse-1 work in Emacs 22 like mouse-2.
	(w3m-info-like-map): Ditto.

2005-02-24  Felix E. Klee  <felix.klee@inka.de>

	* shimbun/sb-ffii.el (shimbun-ffii-group-alist): Renamed.

2005-02-23  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/shimbun.el: Changes to retrieve printable pages instead
	of retrieving pages which are linked from index pages.
	(shimbun-fetch-url): Accept the 4th argument, `referer'.
	(shimbun-article-base-url): New inline function.
	(shimbun-article-url): Redefined as a method.
	(shimbun-header-insert): Call `shimbun-article-base-url' instead
	of calling the above.
	(shimbun-article): Retrieve the pages specified by
	`shimbun-article-url' method.
	(shimbun-make-html-contents): Call `shimbun-article-url' instead
	of calling `shimbun-header-xref'.

	* shimbun/sb-atmarkit.el: Fix its encoding to `iso-2022-7bit'.
	(shimbun-atmarkit-groups): Removed.
	(shimbun-groups): New method.
	(shimbun-article): Removed.
	(shimbun-article-url): New method.

	* shimbun/sb-ibm-dev.el (shimbun-article): Removed.
	(shimbun-article-url): New method.

	* shimbun/sb-msdn.el (shimbun-article): Removed.
	(shimbun-article-url): New method.

	* shimbun/sb-rediff.el (shimbun-article): Removed.
	(shimbun-article-url): New method.

	* shimbun/sb-wired-jp.el (shimbun-headers): Simplified.
	(shimbun-article-url): New method.
	(shimbun-clear-contents): Call the above instead of calling
	`shimbun-header-xref'.

2005-02-23  Felix E. Klee  <felix.klee@inka.de>

	* shimbun/sb-ffii.el: New module.

2005-02-23  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-antenna.el (w3m-antenna-check-rss): Parse all date fields.

2005-02-21  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-impress.el (shimbun-get-headers): Add comment-outed
	html source removal.

2005-02-21  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-form.el (w3m-form-input-textarea): Fix.
